Added endpoint for get movie genres list
