# schema/openapi.v3.json
@@ -1,7 +1,7 @@
 {
   "openapi": "3.0.0",
   "info": {
-    "version": "1.0.0",
+    "version": "1.0.1",
     "title": "Movies API",
     "description": ""
   },
@@ -12,6 +12,43 @@
     }
   ],
   "paths": {
+    "/genres/movies": {
+      "parameters": [
+        {
+          "name": "language",
+          "in": "query",
+          "required": false,
+          "schema": {
+            "type": "string"
+          }
+        }
+      ],
+      "get": {
+        "summary": "Get genres list",
+        "responses": {
+          "200": {
+            "description": "The genres list",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Genres"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Unexpected error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/movies/{listType}": {
       "parameters": [
         {
@@ -213,6 +250,20 @@
           },
           "name": {
             "type": "string"
+          }
+        }
+      },
+      "Genres": {
+        "type": "object",
+        "required": [
+          "genres"
+        ],
+        "properties": {
+          "genres": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/Genre"
+            }
           }
         }
       },
